spacing issue fix

--- a/source/assets/stylesheets/layout/_banner.scss
+++ b/source/assets/stylesheets/layout/_banner.scss
@@ -79,7 +79,7 @@ $banner-heading:#fff;
 .banner-heading {
   color: $banner-heading;
   text-align: center;
-  font-size: 30px;
+  font-size: 24px;
   font-family: 'URWGeometric-Bold';
   font-weight: 400;
   margin: 0 20px 10px;
@@ -95,7 +95,7 @@ $banner-heading:#fff;
       display: block;
       line-height: 65px;
       font-size: 48px;
-      margin: 20px 20px;
+      margin: 0px 20px 10px;
       width: 100%;
   }
   @media(min-width: $screen-xl) {
@@ -113,7 +113,7 @@ $banner-heading:#fff;
 .banner-description {
   text-align: center;
   font-size: 14px;
-  line-height: 22px;
+  line-height: 30px;
   font-weight: 400;
   color: $white;
   width: 85%;
@@ -147,13 +147,14 @@ $taiko-poster-bg: rgba(255, 204, 0, 0.2);
     padding: 20px;
     text-align: left;
     margin: 20px 20px;
-
+		line-height: 30px;
     a {
         color: $white;
 		}
 
 		@media screen and(min-width: $screen-md) {
 			font-size: 16px;
+			margin: 40px 20px;
 		}
 
 		@media screen and(min-width: $screen-lg) {
